# pico-clock-green-rs

./: Cargo.toml  README.md  rust-toolchain.toml  usage_guide.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
src/: alarm.rs  app.rs  buttons.rs  clock.rs  config.rs  display.rs  main.rs  pomodoro.rs  rtc.rs  scheduler.rs  settings.rs  speaker.rs  stopwatch.rs  temperature.rs
